src/objects/Doctor__c.object
<CustomObject>
    <description>This is child object of hospital</description>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Contact__c</fullName>
        <label>Doctor_Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Doctor_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor_lookup</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>Doctors</relationshipLabel>
        <relationshipName>Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_name__c</fullName>
        <label>Doctor_name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Age__c</columns>
        <columns>Doctor_Contact__c</columns>
        <columns>Doctor_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Doctor ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>